# Microsoft

./: CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  CONFIGURATION.md  Dockerfile  README.md  docker-compose.yml  vcpkg.json
apps/nimbus_cli/: CMakeLists.txt
apps/nimbus_cli/src/: main.cpp
apps/nimbus_syncd/: CMakeLists.txt
apps/nimbus_syncd/src/: main.cpp
cmake/: NimbusCompilerSettings.cmake  NimbusProto.cmake
docs/: protocol-versioning.md
libs/common/: CMakeLists.txt
libs/common/include/nimbus/: version.h.in
libs/common/include/nimbus/common/: bounded_blocking_queue.h  clock.h  common_stub.h  config.h  config_schema.h  grpc_metadata_keys.h  lease.h  logger.h  path_validator.h  protocol_version.h  result.h  sha256.h  uuid.h
libs/common/src/: clock.cpp  common_stub.cpp  config.cpp  config_schema.cpp  lease.cpp  logger.cpp  path_validator.cpp  protocol_version.cpp  sha256.cpp  uuid.cpp
libs/common/tests/: CMakeLists.txt  bounded_blocking_queue_test.cpp  clock_test.cpp  config_test.cpp  lease_test.cpp  logger_test.cpp  path_validator_test.cpp  protocol_version_test.cpp  result_test.cpp  sha256_test.cpp  uuid_test.cpp
libs/nimbus_client/: CMakeLists.txt
libs/nimbus_client/include/nimbus/client/: client_stub.h
libs/nimbus_client/src/: client_stub.cpp
proto/greeter/: greeter.proto
proto/storage_node/: storage_node.proto
scripts/: bootstrap.sh  format.sh  gen-certs.sh  lint.sh
services/coordinator/: CMakeLists.txt
services/coordinator/include/nimbus/coordinator/: coordinator.h
services/coordinator/src/: main.cpp
services/greeter_demo/: CMakeLists.txt  greeter_client_main.cpp  greeter_server_main.cpp
services/metadata_service/: CMakeLists.txt
services/metadata_service/include/nimbus/metadata_service/: metadata_service.h
services/metadata_service/src/: main.cpp
services/storage_node/: CMakeLists.txt
services/storage_node/include/nimbus/storage_node/: capability_token.h  chunk_id.h  fault_injecting_chunk_store.h  i_chunk_store.h  local_disk_chunk_store.h  storage_node.h  storage_node_service_impl.h  stream_frame_config.h
services/storage_node/src/: capability_token.cpp  chunk_id.cpp  fault_injecting_chunk_store.cpp  local_disk_chunk_store.cpp  main.cpp  storage_node_service_impl.cpp
services/storage_node/tests/: CMakeLists.txt  chunk_id_test.cpp  fault_injecting_chunk_store_test.cpp  local_disk_chunk_store_test.cpp  replicate_chunk_integration_test.cpp  storage_node_service_test.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
tests/integration/: CMakeLists.txt  greeter_integration_test.cpp
